--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -25,7 +25,7 @@ li {
 }
 
 h1 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Racing Sans One', cursive;
     color: $fontColour;
     text-align: center;
     font-size: 46px;
@@ -58,7 +58,7 @@ p {
     // font-family: 'Lobster', cursive;
     font-size: 28px;
     text-align: center;
-    padding: 4% 2%;
+    padding: 3% 2%;
     margin: 10px;
     float: left;
     text-shadow: lighten(mediumvioletred,30) 3px -6px 20px;
