--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -151,7 +151,7 @@ p {
 .songNameWrapper:before .songNameWrapper:after {
   content: "";
   height: 60%;
-  background:mediumvioletred;
+  background:rgb(208, 21, 139);
   position:absolute;
   top:20%;
   width:500px; 
