--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -2,7 +2,8 @@
 @import "variables.scss";
 
 body {
-    background: #000000;
+    background: #121212;
+    // background: #212121;
 }
 
 .wrapper {
@@ -43,23 +44,43 @@ p {
     color: $fontColour;
 }
 
+// .seasonTile {
+//     border-radius: 3px;
+//     border: 5px solid mediumvioletred;
+//     border-style: ridge;
+//     // color: $fontColour;
+//     color: lighten(mediumvioletred,55);
+//     text-transform: uppercase;
+//     font-weight: bold;
+//     // font-family: 'Lobster', cursive;
+//     font-size: 28px;
+//     text-align: center;
+//     padding: 4% 2%;
+//     margin: 10px;
+//     float: left;
+//     text-shadow: lighten(mediumvioletred,30) 3px -6px 20px;
+//     // text-shadow: #ffffff 3px -6px 10px;
+// }
+
 .seasonTile {
-    border-radius: 3px;
-    border: 5px solid mediumvioletred;
-    border-style: ridge;
-    // color: $fontColour;
-    color: lighten(mediumvioletred,55);
-    text-transform: uppercase;
-    font-weight: bold;
-    // font-family: 'Lobster', cursive;
-    font-size: 28px;
-    text-align: center;
-    padding: 4% 2%;
-    margin: 10px;
-    float: left;
-    text-shadow: lighten(mediumvioletred,30) 3px -6px 20px;
-    // text-shadow: #ffffff 3px -6px 10px;
+  border-radius: 10px;
+  border: 1px solid #e600e6;
+  background: #212121;
+  // background: #191919;
+  color: lighten(#f789a2,55);
+  text-transform: capitalize;
+  border-style: groove;
+  font-weight: bold;
+  letter-spacing: 1px;
+  font-size: 28px;
+  text-align: center;
+  padding: 3% 1.5%;
+  margin: 10px;
+  float: left;
+  filter: drop-shadow(0 0 7px #e600e6);
 }
+
+
 
 .pickSeason {
   font-size: 25px;
