--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -14,6 +14,7 @@ body {
 
 ul {
     list-style: none;
+    padding: 0;
 }
 
 li {
@@ -21,50 +22,68 @@ li {
 }
 
 h1 {
-    font-family: 'Racing Sans One', cursive;
-    color: $fontColour;
-    text-align: center;
-    font-size: 46px;
-    // font-family: Helvetica, sans-serif;
-    letter-spacing: 3px;
+  font-family: 'Racing Sans One', cursive;
+  color: $fontColour;
+  text-align: center;
+  font-size: 110px;
+  position: relative;
+  margin: 10px 0;
+  letter-spacing: 3px;
+  }
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 22px;
+  background: linear-gradient(to right, fuchsia, $fontColour);
+  display: block;
+  text-align: right;
+  padding: 10px;
+  
 }
 
-.headerSpan{
-    color: lighten(mediumvioletred, 30);
+.secondaryHeader{
+    color: fuchsia;
     font-family: helvetica, sans-serif;
     letter-spacing: 0px;
+    text-align: center;
+    position: absolute;
+    font-size: 25px;
+    top: 141px;
+    right: 240px;
+    left: 525px;
+    margin: 0;
 } 
+
+.catchPhrase {
+// color: lighten(#121212, 30%);
+text-align: center;
+// color: linear-gradient(to right, fuchsia, $fontColour);
+background: -webkit-linear-gradient(to right, fuchsia, $fontColour);
+background: linear-gradient(to right, fuchsia, $fontColour);
+color:transparent;
+-webkit-background-clip: text;
+background-clip: text;
+text-transform: uppercase;
+letter-spacing: .2px;
+}
+
 
 p {
     font-family: Helvetica, sans-serif;
-    // color: $fontColour;
 }
 
-// .seasonTile {
-//     border-radius: 3px;
-//     border: 5px solid mediumvioletred;
-//     border-style: ridge;
-//     // color: $fontColour;
-//     color: lighten(mediumvioletred,55);
-//     text-transform: uppercase;
-//     font-weight: bold;
-//     // font-family: 'Lobster', cursive;
-//     font-size: 28px;
-//     text-align: center;
-//     padding: 4% 2%;
-//     margin: 10px;
-//     float: left;
-//     text-shadow: lighten(mediumvioletred,30) 3px -6px 20px;
-//     // text-shadow: #ffffff 3px -6px 10px;
-// }
+.tileContainer {
+  white-space: nowrap;
+  text-align: center;
+}
 
 .seasonTile {
   border-radius: 10px;
   border: 1px solid #e600e6;
   background: #212121;
-  // background: #191919;
-  color: lighten(#f789a2,55);
-  text-transform: capitalize;
+  text-transform: uppercase;
+  color: white;
   border-style: groove;
   font-weight: bold;
   letter-spacing: 1px;
@@ -72,11 +91,14 @@ p {
   text-align: center;
   padding: 3% 1.5%;
   margin: 10px;
-  float: left;
+  display: inline-block;
   filter: drop-shadow(0 0 7px #e600e6);
 }
 
-
+.seasonTile:hover {
+  filter: drop-shadow(0 0 50px #e600e6);
+  
+}
 
 .pickSeason {
   font-size: 25px;
@@ -93,24 +115,19 @@ p {
   position: relative;
 }
 
-button {
-  // border: 3px solid mediumvioletred;
+.slayButton {
   background: #e600e6;
   border-style: outset;
   margin: 10px;
   text-transform: uppercase;
-  // display: inline-block;
-  // float: left;
   width: 100%;
   font-size: 30px;
-  // background: #191919;
   color: #191919;
   border-radius: 20px;
   position: relative;
   top: 70%;
   left: 50%;
-  // bottom: 50%;
-  // margin: 0 auto;
+  font-family: 'Racing Sans One', cursive;
 }
 
 @media (max-width: 550px) {
@@ -120,17 +137,11 @@ button {
 }
 
 .songCard {
-  // float: left;
-  // width: calc(45% - 100px);
   margin: 10px 40px;
-  // border: solid 3px #e600e6;  
   border-radius: 5px;
   text-align:center;
   background:#212121;
   position: relative;
-  // filter: drop-shadow(0 0 3px grey);
-  // height: 45px;
-  // padding-top: 20px;
 }
 
 .songCard ul {
@@ -141,15 +152,15 @@ button {
   width: 95%;
   margin: 0 auto;
   margin-top: 20px;
-  overflow: auto;
   height: 500px;
 }
 
-
-#songCardWrapperID
-
-
-
+.thumb-vertical {
+  width: 5px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #e600e6;
+}  
 
 .songlist {
     text-align: center;
@@ -158,25 +169,19 @@ button {
     padding: 0;
     float: left;
     width: 50%;
-    // border: 2px solid #e600e6;
 }
 
 .songArtist {
     font-weight: bold;
-    // font-family: 'Racing Sans One', cursive;
     font-family: Helvetica, sans-serif;
     font-size: 20px;
-    // color: white;
     text-transform:uppercase;
 }
 
 .songName {
     font-weight: bold;
     font-family: 'Racing Sans One', cursive;
-    
     border:solid 8px #e600e6;
-    // position:relative;
-    // background: #212121;
     letter-spacing:1px;
     font-weight:500;
     font-size: 25px;
@@ -241,38 +246,74 @@ button {
 // SpotifyPopUp component styles
 
 .spotifyPopUpWrapper {
-  width: 90%;
-  float: left;
+  width: 100%;
+    p {
+      float: left;
+      width: calc(55% - 40px);
+      font-size: 30px;
+      color: #000000;
+      line-height: 150px;
+      background-color: #ffffff;
+      max-height: 750px;
+      overflow: scroll;
+      margin: 0 auto;
+      padding: 20px;
+    }
 }
 
 .popUpLeft {
   float: left;
+  width: calc(45% - 30px);
+  margin-right: 30px;
+  min-height: 750px;
+  max-height: 800px;
 }
+
 
 .popUpLeft img {
   float: left;
-
+  width: 100%;
 }
 
 iframe {
   float: left;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
 #popUp {
-  height: 100vh;
-  width: 100vw;
-  background-color: white;
+  height: 80vh;
+  width: 95%;
+  background-color: #212121;
+  opacity: .95;
   transition: transform 400ms ease-in;
   float: left;
+  position: relative;
 }
 
 #popUp.slideIn {
-  transform: translateX(0);
+  padding: 80px 25px;
+  position: absolute;
+  top: 600px;
+  transform: translateX(-50%);
+  left: 50%;
+  max-width: 1400px;
 }
 
 #popUp.slideOut {
+  padding: 80px 25px;
+  position: absolute;
+  top: 600px;
   transform: translateX(-100%);
+}
 
+.closePopUp {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 .flicker-1 {
