--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -21,44 +21,69 @@ li {
     color: $fontColour;
 }
 
+.mainContainer {
+  height: 100vh;
+}
+
 h1 {
   font-family: 'Racing Sans One', cursive;
   color: $fontColour;
   text-align: center;
-  font-size: 110px;
+  font-size: 140px;
   position: relative;
   margin: 10px 0;
   letter-spacing: 3px;
-  }
+    .mainHeader {
+      // height: 30vh;
+  }}
 
-a {
+
+.spotifyLogin {
   color: #ffffff;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 20px;
   background: linear-gradient(to right, fuchsia, $fontColour);
   display: block;
   text-align: right;
-  padding: 10px;
-  
+  padding: 8px;
+  text-transform: capitalize;
 }
 
+.login {
+  text-decoration: underline;
+}
+
+.fa-spotify {
+  padding-left: 10px;
+  padding-right: 5px;
+  font-size: 20px;
+}
+
+svg {
+  fill: white;
+  width: 200px;
+  height: 200px;
+  display: block;
+  margin: auto;
+}
+
+
 .secondaryHeader{
-    color: fuchsia;
-    font-family: helvetica, sans-serif;
-    letter-spacing: 0px;
-    text-align: center;
-    position: absolute;
-    font-size: 25px;
-    top: 141px;
-    right: 240px;
-    left: 525px;
-    margin: 0;
+  color: fuchsia;
+  font-family: helvetica, sans-serif;
+  letter-spacing: 0px;
+  text-align: center;
+  position: absolute;
+  font-size: 25px;
+  top: 141px;
+  right: 240px;
+  left: 525px;
+  margin: 0;
+    
 } 
 
 .catchPhrase {
-// color: lighten(#121212, 30%);
 text-align: center;
-// color: linear-gradient(to right, fuchsia, $fontColour);
 background: -webkit-linear-gradient(to right, fuchsia, $fontColour);
 background: linear-gradient(to right, fuchsia, $fontColour);
 color:transparent;
@@ -66,22 +91,57 @@ color:transparent;
 background-clip: text;
 text-transform: uppercase;
 letter-spacing: .2px;
+font-size: 22px;
+margin: 0;
+}
+
+.smoothscrollFromHeader {
+  display: block;
+  margin: auto;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  border: 1px solid fuchsia;
+  font-weight: bold;
+  letter-spacing: .5px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 20px;
+  text-transform: uppercase;
+  background: #121212;
+  filter: drop-shadow(0 0 7px fuchsia);
+  text-shadow: 5px -5px 20px lighten(fuchsia, 30%);
+  // margin-top: 40px;
+  // margin-bottom: 80px;
 }
 
 
 p {
-    font-family: Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
 }
 
 .tileContainer {
   white-space: nowrap;
   text-align: center;
+  height: 100vh;
+  // height: 60vh;
 }
+
+.seasonInput{
+  display: none;
+}
+
+input[type=radio]:checked + label {
+  background-color: blue;
+}
+
+
 
 .seasonTile {
   border-radius: 10px;
-  border: 1px solid #e600e6;
-  background: #212121;
+  border: 1px solid fuchsia;
+  background: #121212;
   text-transform: uppercase;
   color: white;
   border-style: groove;
@@ -90,15 +150,16 @@ p {
   font-size: 28px;
   text-align: center;
   padding: 3% 1.5%;
-  margin: 10px;
+  margin: 20px;
   display: inline-block;
-  filter: drop-shadow(0 0 7px #e600e6);
+  filter: drop-shadow(0 0 7px fuchsia);
+  text-shadow: 5px -5px 20px lighten(fuchsia, 30%);
 }
 
 .seasonTile:hover {
-  filter: drop-shadow(0 0 50px #e600e6);
-  
+  filter: drop-shadow(0 0 20px fuchsia);
 }
+
 
 .pickSeason {
   font-size: 25px;
@@ -110,31 +171,60 @@ p {
 
 .buttonContainer {
   float: left;
-  width: 30%;
+  width: 45%;
   height: 100%;
   position: relative;
+  margin-right:20px;
 }
 
 .slayButton {
-  background: #e600e6;
-  border-style: outset;
+  border: none;
+  background: fuchsia;
   margin: 10px;
   text-transform: uppercase;
   width: 100%;
   font-size: 30px;
   color: #191919;
   border-radius: 20px;
-  position: relative;
-  top: 70%;
-  left: 50%;
+  margin-top: 55px;
   font-family: 'Racing Sans One', cursive;
+}
+
+.songlist {
+  text-align: center;
+  margin: 0 auto;
+  margin: 10px;
+  padding: 0;
+  float: left;
+
+    width: 50%;
+}
+
+@media (max-width: 930px) {
+  .buttonContainer {
+    width: 35%;
+    margin-right: 10px;
+    margin-left: 30px;
+    // font-size: 22px;
+
+  }
 }
 
 @media (max-width: 550px) {
   .buttonContainer {
     float: none;
+    margin: 0 auto;
+  }
+  .slayButton {
+    margin-top: 35px;
+  }
+  .songlist {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 }
+
 
 .songCard {
   margin: 10px 40px;
@@ -142,34 +232,24 @@ p {
   text-align:center;
   background:#212121;
   position: relative;
+
+  // width: 50%;
 }
 
-.songCard ul {
-  // border: 3px solid grey;
+.songCardSection {
+  // height: 100vh;
 }
 
 .songCardWrapper {
   width: 95%;
   margin: 0 auto;
   margin-top: 20px;
-  height: 500px;
+  // height: 500px;
+  height: 80vh;
+  clear:both;
 }
 
-.thumb-vertical {
-  width: 5px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: #e600e6;
-}  
 
-.songlist {
-    text-align: center;
-    margin: 0 auto;
-    margin: 10px;
-    padding: 0;
-    float: left;
-    width: 50%;
-}
 
 .songArtist {
     font-weight: bold;
@@ -181,7 +261,7 @@ p {
 .songName {
     font-weight: bold;
     font-family: 'Racing Sans One', cursive;
-    border:solid 8px #e600e6;
+    border:solid 8px fuchsia;
     letter-spacing:1px;
     font-weight:500;
     font-size: 25px;
@@ -190,45 +270,12 @@ p {
     text-align: center;
 }
 
-// .songName:before {
-//   content: "";
-//   width: 0;
-//   height: 0;
-//   border-top: .9em solid transparent;
-//   border-left: .9em solid mediumvioletred;
-//   border-bottom: .9em solid transparent;
-//   position:absolute;
-//   left:0;
-//   top:0;
-
-// }
-
-// .songName:after {
-//   content: "";
-//   width: 0;
-//     height: 0;
-//     border-top: .9em solid transparent;
-//     border-right: .9em solid mediumvioletred;
-//     border-bottom: .9em solid transparent;
-//   position:absolute;
-//   right:0;
-//   top:0;
-// }
 
 .songNameWrapper {
   width: 90%;
   margin: 0 auto;
   position:relative;
   margin: 10px auto;
-}
-
-.songNameWrapper:before .songNameWrapper:after {
-  content: "";
-  height: 60%;
-  background:rgb(208, 21, 139);
-  position:absolute;
-  top:20%;
-  width:500px; 
 }
 
 .songNameWrapper:after {
@@ -245,16 +292,24 @@ p {
 
 // SpotifyPopUp component styles
 
+.popUpHeader {
+  font-family: 'Racing Sans One', cursive;
+
+}
+
 .spotifyPopUpWrapper {
   width: 100%;
+  height:80vh;
     p {
       float: left;
       width: calc(55% - 40px);
       font-size: 30px;
-      color: #000000;
-      line-height: 150px;
-      background-color: #ffffff;
-      max-height: 750px;
+      // color: #000000;
+      line-height: 80px;
+      // background-color: #ffffff;
+      background-color: #212121;
+      color: cyan;
+      max-height: 80vh;
       overflow: scroll;
       margin: 0 auto;
       padding: 20px;
@@ -265,14 +320,16 @@ p {
   float: left;
   width: calc(45% - 30px);
   margin-right: 30px;
-  min-height: 750px;
+  // min-height: 750px;
   max-height: 800px;
+  // border: 3px solid mediumvioletred;
 }
-
 
 .popUpLeft img {
   float: left;
   width: 100%;
+  max-width: 200px;
+  margin: 0 auto;
 }
 
 iframe {
@@ -282,38 +339,42 @@ iframe {
 }
 
 #popUp {
-  height: 80vh;
+  max-height: 100vh;
   width: 95%;
   background-color: #212121;
-  opacity: .95;
+  opacity: .99;
   transition: transform 400ms ease-in;
   float: left;
   position: relative;
+  
 }
 
 #popUp.slideIn {
-  padding: 80px 25px;
+  padding: 50px 25px;
   position: absolute;
-  top: 600px;
+  top: 1100px;
   transform: translateX(-50%);
   left: 50%;
   max-width: 1400px;
 }
 
 #popUp.slideOut {
-  padding: 80px 25px;
+  padding: 50px 25px;
   position: absolute;
-  top: 600px;
+  top: 1000px;
   transform: translateX(-100%);
 }
 
 .closePopUp {
   position: absolute;
   right: 0px;
-  top: 0px;
+  top: -10px;
   border-radius: 50%;
   width: 40px;
   height: 40px;
+  background-color: #e600e6;
+  border: none;
+  opacity: .9;
 }
 
 .flicker-1 {
